--- a/UI/signup.css
+++ b/UI/signup.css
@@ -3,41 +3,84 @@ body{
     background-color: rgb(220, 226, 231)
 }
 
-.navigation a {
-    padding: 5px;
-    float: left;
-    text-decoration: none;
-    color: white;
-    text-transform: capitalize;
-    font-size: 20px;
-    margin: 5px;
-   border-right: 1px solid rgb(97, 92, 92);
-    border-radius: 5px;
-}
-.navigation a.logo {
-    font-style: italic;
-}
-.navigation a:hover {
-    background-color: rgb(109, 120, 131);
-}
-
-.navigation{
+.topnav {
     background-color: #24292E;
     overflow: hidden;
-    padding: 5px;
-}
-.header-right {
-    float: right;
-    border-right: 2px solid black;
-    
-}
-.header-right a {
-    margin: 10px;
-    
-}
-.header-right .sign-up {
-    border: 1px solid white;
-}
+  }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 13px 11px;
+    margin: 2px;
+    text-decoration: none;
+    font-size: 20px;
+    border-radius: 5px;
+  }
+  .topnav a:nth-child(4),.topnav a:nth-child(5){
+  float: right;
+  
+  }
+  .topnav .signup{
+      border: 1px solid white;
+  }
+  
+  /* Add an active class to highlight the current page */
+  .active {
+    background-color: rgb(101, 100, 105);
+    font-style: italic;
+    font-weight: bold;
+    color: white;
+  }
+  
+  /* Hide the link that should open and close the topnav on small screens */
+  .topnav .icon {
+    display: none;
+  }
+  
+ 
+  
+  
+  /* Add a dark background on topnav links and the dropdown button on hover */
+  .topnav a:hover{
+    background-color: #555;
+    color: white;
+  }
+  
+  
+  /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+  @media screen and (max-width: 600px) {
+    .topnav a:not(:first-child) {
+      display: none;
+    }
+    .topnav a.icon {
+      float: right;
+      display: block;
+    }
+  }
+  
+  /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+  @media screen and (max-width: 600px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive a.icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .topnav.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+    .topnav.responsive .dropdown .dropbtn {
+      display: block;
+      width: 100%;
+      text-align: left;
+    }
+  }
 article .page-title{
     margin: 50px;
 }
@@ -232,4 +275,20 @@ width: 40%;
         display: block;
         width: 100%;
     }
+}
+
+footer .navigation{
+border: 1px solid rgb(197, 189, 189)
+}
+footer .navigation a{
+    float: left;
+    padding: 10px;
+    margin: 5px;
+    text-decoration: none;
+    font-size: 15px;
+    color: #24292E;
+    border-radius: 3px;
+}
+footer .navigation a:hover{
+    background-color: rgb(204, 193, 193)
 }
