feature(anti spam) [Delivers #166649326]

--- a/UI/signup.css
+++ b/UI/signup.css
@@ -249,6 +249,7 @@ width: 40%;
 
     }
     .challenge .answer span {
+        margin: 20px;
         color: blue;
     }
 @media screen and (max-width: 1110px) {
