--- a/UI/index.css
+++ b/UI/index.css
@@ -169,8 +169,11 @@ width: 70%;
     }
     .column-right .right-sidebar{
         width: 97%;
+        height: 400px;
     }
-    
+    .rows .column-right {
+        height: 400px;
+    }
 }
 /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
 @media screen and (max-width: 700px) {
