feature(users can report a posted ad) [finishes #166756884]

--- a/UI/signin.css
+++ b/UI/signin.css
@@ -168,7 +168,7 @@ article .intro-div .lock img{
     background-color: rgb(255, 255, 255)
 }
 
-[type="submit"] {
+.sign-in {
     margin: 0 auto;
     margin-top: 20px;
     display: block;
